# tictac

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.h  main.cpp  open_ai.cpp  open_ai.h  tic_request.json
test/: CMakelists.txt  test_board.cpp
